@@ -1,17 +1,18 @@
 package com.tourism.platform.config;
 
-import com.tourism.platform.security.CustomUserDetailsService;
 import com.tourism.platform.security.JwtAuthenticationFilter;
+import com.tourism.platform.security.JwtTokenProvider;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -22,8 +23,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Security Configuration for the Tourism Platform
@@ -36,15 +37,9 @@ import java.util.List;
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
-    private final CustomUserDetailsService customUserDetailsService;
-
-    public SecurityConfig(CustomUserDetailsService customUserDetailsService) {
-        this.customUserDetailsService = customUserDetailsService;
-    }
-
 
     @Value("${app.cors.allowed-origins}")
-    private String[] allowedOrigins;
+    private String allowedOrigins;
 
     /**
      * Password encoder bean for hashing passwords
@@ -52,17 +47,6 @@ public class SecurityConfig {
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
-    }
-
-    /**
-     * Authentication provider bean that uses our custom UserDetailsService
-     */
-    @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(customUserDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
     }
 
     /**
@@ -87,12 +71,15 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(parseAllowedOrigins(allowedOrigins));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Trace-Id", "X-Request-Id"));
+        configuration.setExposedHeaders(List.of("X-Trace-Id", "X-Request-Id"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // With server.servlet.context-path=/api/v1, Spring matches CORS paths relative to the app context.
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
@@ -108,6 +95,10 @@ public class SecurityConfig {
             
             // Configure CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .headers(headers -> headers
+                    .contentTypeOptions(contentType -> {})
+                    .frameOptions(frame -> frame.sameOrigin())
+                    .xssProtection(Customizer.withDefaults()))
             
             // Configure session management to stateless
             .sessionManagement(session -> 
@@ -115,6 +106,9 @@ public class SecurityConfig {
             
             // Configure authorization rules
             .authorizeHttpRequests(authz -> authz
+                // CORS preflight requests
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
                 // Public endpoints - MOST SPECIFIC FIRST
                 .requestMatchers(HttpMethod.POST, "/users").permitAll()
                 .requestMatchers("/users/register").permitAll()
@@ -139,23 +133,22 @@ public class SecurityConfig {
                 .requestMatchers(HttpMethod.GET, "/api/v1/activities/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/v1/services/**").permitAll()
                 
-                // User management endpoints - AUTHENTICATED
-                .requestMatchers(HttpMethod.GET, "/users").authenticated()
-                .requestMatchers(HttpMethod.GET, "/users/*").authenticated()
-                .requestMatchers(HttpMethod.PUT, "/users/**").authenticated()
-                .requestMatchers(HttpMethod.DELETE, "/users/**").hasRole("SUPER_ADMIN")
-                
                 // Travel planning endpoints (authenticated)
-                .requestMatchers("/travel-plans/**").authenticated()
-                .requestMatchers("/reservations/**").authenticated()
+                .requestMatchers("/api/v1/travel-plans/**").authenticated()
+                .requestMatchers("/api/v1/reservations/**").authenticated()
                 
                 // Social features endpoints (authenticated)
-                .requestMatchers("/connections/**").authenticated()
-                .requestMatchers("/reviews/**").authenticated()
-                .requestMatchers("/messages/**").authenticated()
+                .requestMatchers("/api/v1/connections/**").authenticated()
+                .requestMatchers("/api/v1/reviews/**").authenticated()
+                .requestMatchers("/api/v1/messages/**").authenticated()
+                
+                // User management endpoints
+                .requestMatchers(HttpMethod.GET, "/api/v1/users/**").authenticated()
+                .requestMatchers(HttpMethod.PUT, "/api/v1/users/**").authenticated()
+                .requestMatchers(HttpMethod.DELETE, "/api/v1/users/**").hasRole("SUPER_ADMIN")
                 
                 // Admin endpoints
-                .requestMatchers("/admin/**").hasAnyRole("ADMIN", "SUPER_ADMIN")
+                .requestMatchers("/api/v1/admin/**").hasAnyRole("ADMIN", "SUPER_ADMIN")
                 
                 // All other requests require authentication
                 .anyRequest().authenticated()
@@ -165,5 +158,12 @@ public class SecurityConfig {
             .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
+    }
+
+    private List<String> parseAllowedOrigins(String originsProperty) {
+        return java.util.Arrays.stream(originsProperty.split(","))
+                .map(String::trim)
+                .filter(origin -> !origin.isEmpty())
+                .collect(Collectors.toList());
     }
 }
